gcc/testsuite/rust/rustc/ui/argument-suggestions/issue-98897.rs
fn main() {
    (|_, ()| ())([return, ()]);
// { dg-error ".E0057." "" { target *-*-* } .-1 }
}

